@@ -2,13 +2,13 @@
 
 '''
 #
-# GO_done_newlit.py
+# GO_done.py
 #
 # Report:
 #       
 # A report of all markers with GO Annotations 
 # where the GO marker is a reference gene
-# AND
+# OR
 # the GO Annotation has a completion date.
 #
 # exclude J:60000,J:73065,J:72245,J:80000,J:72247,J:99680
@@ -23,14 +23,27 @@
 #	   whose creation date is greater than the completion date.
 #
 # Usage:
-#       GO_done_newlit.py
+#       GO_done.py
 #
 # History:
 #
-# 01/27/2010
-#	- TR9612; reduced this report to 
-#	  "completed annotations that contain new literature"
-#	  copied from GO_done.py
+# 01/28/2010	lec
+#	- TR9612/select jnumbers into list
+#
+# 01/06/2010	lec
+#	- TR9996/modification to "more than 5 references"
+#
+# 10/24/2006	lec
+#	- TR7533/7920; GO tracking
+#
+# 10/17/2006	lec
+#	- TR 7976; added Reference genes; more columns
+#
+# 08/28/2006	lec
+#	- TR 7876; added headings and Refs_used column
+#
+# 03/02/2006	lec
+#	- TR 7532
 #
 '''
  
@@ -58,38 +71,43 @@ PAGE = reportlib.PAGE
 
 def printResults(cmd, isReferenceGene):
 
-    global reportCount
-
     results = db.sql(cmd, 'auto')
     for r in results:
 
         key = r['_Marker_key']
-
-	# skip if no literature
-	if not jnums.has_key(key):
-	   continue
+	cdate = ''
 
         if gorefs.has_key(key):
-           numRefs = str(len(gorefs[key]))
+            numRefs = str(len(gorefs[key]))
         else:
-	   numRefs = '0'
-     
+	    numRefs = '0'
+    
+	if jnums.has_key(key):
+	    numJnums = str(len(jnums[key]))
+	else:
+	    numJnums = '0'
+
+	# only print date for "done" records
+	if godone.has_key(key):
+	    m = godone[key]
+	    cdate = m['cdate']
+
         fp.write(r['symbol'] + TAB)
         fp.write(r['accID'] + TAB)
         fp.write(isReferenceGene + TAB)
-        fp.write(r['cdate'] + TAB)
+        fp.write(cdate + TAB)
         fp.write(numRefs + TAB)
-        fp.write(str(len(jnums[key])) + TAB)
-	fp.write(string.join(jnums[key], ',') + CRT)
+        fp.write(numJnums + TAB)
 
-	reportCount = reportCount + 1
+        if cdate != '' and jnums.has_key(key):
+	    fp.write(string.join(jnums[key], ','))
+        fp.write(CRT)
 
 #
 # Main
 #
 
 fp = reportlib.init(sys.argv[0], fileExt = '.mgi', outputdir = os.environ['QCOUTPUTDIR'], printHeading = None)
-fp.write('GO "Done" New Literatire' + 2*CRT)
 fp.write('Gene Symbol' + TAB)
 fp.write('MGI-ID' + TAB)
 fp.write('reference gene status' + TAB)
@@ -100,23 +118,21 @@ fp.write('J numbers' + 2*CRT)
 
 #
 # select all Markers w/ GO Annotations that are Reference genes
-# and that contains a completion date
 #
-db.sql('''
-	select convert(char(10), t.completion_date, 101) as cdate, 
-	       m._Marker_key, m.symbol, a.accID
-	into #goref 
-	from GO_Tracking t, MRK_Marker m, ACC_Accession a 
-	where t.isReferenceGene = 1 
-	and t.completion_date is not null 
-	and t._Marker_key = m._Marker_key 
-	and m._Marker_key = a._Object_key 
-	and a._MGIType_key = 2 
-	and a._LogicalDB_key = 1 
-	and a.prefixPart = 'MGI:' 
-	and a.preferred = 1
-	''', None)
-db.sql('create index goref_idx1 on #goref(_Marker_key)', None)
+#db.sql('''
+#	select convert(char(10), t.completion_date, 101) as cdate, 
+#	       m._Marker_key, m.symbol, a.accID 
+#	into #goref 
+#	from GO_Tracking t, MRK_Marker m, ACC_Accession a 
+#	where t.isReferenceGene = 1 
+#	and t._Marker_key = m._Marker_key 
+#	and m._Marker_key = a._Object_key 
+#	and a._MGIType_key = 2 
+#	and a._LogicalDB_key = 1 
+#	and a.prefixPart = 'MGI:' 
+#	and a.preferred = 1
+#	''', None)
+#db.sql('create index goref_idx1 on #goref(_Marker_key)', None)
 
 #
 # select all Markers w/ GO Annotations that contains a completion date
@@ -144,18 +160,20 @@ for r in results:
     godone[key] = r
 
 #
-# select all jnumbers that exist from both goref and godone
+# select list of jnumbers selected for GO that have not already been used in an annotation
+# select list of jnumbers selected for GO whose creation date is greater than the completion date
 #
 results = db.sql('''
 	select b._Marker_key, b.jnumID 
-	from BIB_GOXRef_View b, #goref g
-	where b._Marker_key = g._Marker_key
-	and b.creation_date > dateadd(day,1,g.cdate)
-	union
-        select b._Marker_key, b.jnumID 
 	from BIB_GOXRef_View b, #godone g
 	where b._Marker_key = g._Marker_key
-	and b.creation_date > dateadd(day,1,g.cdate)
+	and not exists (select 1 from VOC_Annot a, VOC_Evidence e 
+	where a._AnnotType_key = 1000 
+	and a._Annot_key = e._Annot_key 
+	and e._Refs_key = b._Refs_key) 
+	and exists (select 1 from BIB_GOXRef_View b, #godone g
+ 		where b._Marker_key = g._Marker_key
+ 		and b.creation_date > dateadd(day,1,g.cdate))
 	''', 'auto')
 
 jnums = {}
@@ -194,8 +212,6 @@ for r in results:
 	gorefs[key] = []
     gorefs[key].append(value)
 
-reportCount = 0
-
 # reference genes first
 printResults('select * from #goref order by symbol', 'y')
 
@@ -206,8 +222,18 @@ printResults('''
 	order by d.symbol
 	''', 'n')
 
+referenceGenes = db.sql('select count(*) from #goref', 'auto')[0]['']
+completedGenes = db.sql('select count(*) from #godone', 'auto')[0]['']
+refcompletedGenes = db.sql('''
+	select count(r._Marker_key) 
+	from #goref r, #godone d 
+	where r._Marker_key = d._Marker_key
+	''', 'auto')[0]['']
+
 fp.write(CRT * 2)
-fp.write('total number of genes: %s\n' % (reportCount))
+fp.write('total number of completed genes: %s\n' % (completedGenes))
+fp.write('total number of reference genes: %s\n' % (referenceGenes))
+fp.write('total number of reference genes that are completed: %s\n' % (refcompletedGenes))
 
 reportlib.finish_nonps(fp)
 
