@@ -1,3 +1,9 @@
+TAG: qcreports_db-5-0-0-17
+DATE: 07/10/2012
+STAFF: lec
+CHANGES: 
+1) TR11117/GXD_ImagePanes.py; move from monthly to weekly
+
 TAG: qcreports_db-5-0-0-16
 DATE: 06/19/2012
 STAFF: lec
